--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>gradoop-examples</module>
         <module>gradoop-checkstyle</module>
         <module>gradoop-hbase</module>
+        <module>gradoop-accumulo</module>
     </modules>
 
     <developers>
@@ -79,6 +80,14 @@
             <timezone>+1</timezone>
             <organization>University of Leipzig</organization>
         </developer>
+        <developer>
+            <id>chpengzh</id>
+            <name>PengZhi Chen</name>
+            <email>chpengzh@foxmail.com</email>
+            <timezone>+8</timezone>
+            <organization>Sen Yat-sun University</organization>
+            <url>https://chpengzh.com</url>
+        </developer>
     </developers>
 
     <scm>
@@ -108,6 +117,7 @@
         <license.licenseName>apache_v2</license.licenseName>
 
         <!-- alpha order require -->
+        <dep.accumulo.version>1.8.1</dep.accumulo.version>
         <dep.bson.version>3.6.3</dep.bson.version>
         <dep.flink.version>1.3.1</dep.flink.version>
         <dep.gdl.version>0.3</dep.gdl.version>
@@ -435,6 +445,12 @@
                 <version>${dep.flink.version}</version>
             </dependency>
 
+            <!-- Accumulo -->
+            <dependency>
+                <groupId>org.apache.accumulo</groupId>
+                <artifactId>accumulo-core</artifactId>
+                <version>${dep.accumulo.version}</version>
+            </dependency>
 
             <!-- HBase -->
             <dependency>
@@ -514,6 +530,14 @@
                 <artifactId>flink-test-utils_2.11</artifactId>
                 <version>${dep.flink.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- Accumulo -->
+            <dependency>
+                <groupId>org.apache.accumulo</groupId>
+                <artifactId>accumulo-minicluster</artifactId>
+                <scope>test</scope>
+                <version>${dep.accumulo.version}</version>
             </dependency>
 
             <!-- HBase -->
